--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-slider-component": "^3.2.15",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
